1999-04-23  Alex Lancaster  <alex@santafe.edu>

	* MessageProbe.m (dynamicCallOn): Use #ifdef HAVE_JDK to protect
	the Java-specific code.
	Likewise protect the #include <directory.h>.

1999-04-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* MessageProbe.m (dynamicCallOn): Call setObjCReturnType on
	FArguments instance.

	* MessageProbe.[hm], objectbase.h ([MessageProbe
	-stringDynamicCallOn:], [MessageProbe -objectDynamicCallOn:],
	[MessageProbe -intDynamicCallOn:]): New methods.

1999-04-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (JAVAINCLUDES): New variable for java/c + @JAVAINCLUDES@.
	(INCLUDES): Use it.

	* MessageProbe.m (dynamicCallOn): Convert ffi version to 
	use FCall/FArguments and support Java.

	* MessageProbe.m ([MessageProbe -setArg:ToString:]): In
	the case of _C_CHARPTR, copy the string since Java stubs
	will only provide the string conversion temporarily.

	* Swarm.h: Include objectbase.h.  Don't include activity.h.
	(Swarm): Add protocol compliance tag. 

	* Swarm.m: Add Creating tag.

	* VarProbe.h:  Include objectbase.h.
	(VarProbe): Add protocol compliance tag. 

	* MessageProbe.h:  Include objectbase.h.
	(MessageProbe): Add protocol compliance tag. 

	* objectbase.h (MessageProbe): Add setting tag.

1999-04-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* objectbase.h (val_t): Use types_t instead of included union.

	* MessageProbe.m: Accomodate types_t changes throughout 
	(lexical _char to schar name changes..).

1999-04-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* CustomProbeMap.m ([CustomProbeMap
	+create:forClass:withIdentifiers:]): Check for NULL `identifier'
	before deferencing.
	
1999-04-01  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* objectbase.h: Protocol Swarm inherits protocols SwarmProcess and
	CREATABLE.

1999-03-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* objectbase.h: Make SwarmObject creatable. 

1999-03-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
